package org.example.Epstein;

public interface Informes {

    void verPoliticos();
    void informeJuzgado();
    void verRanking();

}
